[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.11.0"
rusqlite = "0.29.0"
serde = "1.0.192"
serde_derive = "1.0.192"
toml = "0.8.8"
